--- a/web_app/index.html
+++ b/web_app/index.html
@@ -68,8 +68,6 @@
             grid-template-columns: 1fr 350px;
             gap: 24px;
             margin-bottom: 30px;
-            align-items: start;
-            /* Prevent stretching */
         }
 
         .game-container {
@@ -78,23 +76,22 @@
             backdrop-filter: blur(20px);
             border-radius: 24px;
             padding: 8px;
+            /* 20px → 8px 정도로 줄이기 */
             box-shadow: 0 20px 60px rgba(0, 0, 0, 0.15);
             display: flex;
             align-items: center;
             justify-content: center;
-            width: fit-content;
-            /* Fit to canvas size */
-            max-width: 100%;
         }
 
 
         #gameCanvas {
             display: block;
-            width: 960px;
-            /* Fixed width */
-            height: 720px;
-            /* Fixed height */
-            max-width: 100%;
+            width: 100%;
+            /* 960px → 부모 가로 꽉 채우기 */
+            height: auto;
+            /* 비율 유지 */
+            aspect-ratio: 4 / 3;
+            /* 960:720 비율 유지용 */
             border-radius: 16px;
             background: linear-gradient(180deg, #e3f2fd 0%, #fff9c4 100%);
         }
